css/style.css
:root {
    --n-0: #fff;
    --n-100: #f3f3f3;
    --n-600: #DADADA;
    --n-900: #474747;
    --n-1000: #1c1b1b;
}

[data-theme="dark"] {
    --n-0: #1C1B1B;
    --n-100: #1F1F1F;
    --n-600: #444242;
    --n-900: #C3C3C3;
    --n-1000: #F3F3F3;
}

body {
    font-family: "Rubik", serif;
    font-size: 1rem;
    font-weight: 400;
    color: var(--n-1000);
    background-color: #1c1b1b;
}


h2 {
    margin-bottom: 0;
}

h3 {
    font-family: "Rubik", serif;
}

ul {
    list-style: none;
    padding: 0;
}

a {
    font-weight: 400;
    width: fit-content;
}

a:hover {
    text-decoration: none;
    color: var(--n-900);
}

.mar-top {
    margin-top: 1em;
}

.main-container {
    max-width: 1440px;
    margin: auto;
    display: flex;
    flex-direction: column;
}

.preloader {
    align-items: center;
    background: var(--white);
    display: flex;
    height: 100vh;
    justify-content: center;
    left: 0;
    position: fixed;
    top: 0;
    transition: opacity 0.3s linear;
    width: 100%;
    z-index: 9999;
    pointer-events: none;
}

header {
    top: 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 100%;
    z-index: 4;
    height: auto;
    background-color: var(--n-0);
}

.top-bar {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 32px 80px 32px 80px;
}

.info {
    margin-left: 48px;
}

.name {
    font-family: "Rubik", serif;
    font-size: 4.8rem;
    font-weight: 600;
    height: 4.8rem;
    overflow: hidden;
    margin-bottom: 8px;
}

.info-bottom {
    display: flex;
    align-items: center;
    justify-content: space-between;
    font-size: 1.2rem;
    margin-left: 24px;
}

.role {
    font-weight: 500;
    letter-spacing: 0.2rem;
}

.header-s {
    display: flex;
    align-items: center;
    justify-content: space-between;
    z-index: 3;
    position: fixed;
    background-color: var(--n-0);
    width: 100%;
    max-width: 1440px;
    height: 100px;
}

.info-s {
    display: flex;
    align-items: center;
    gap: 16px;
}

.info-s img {
    width: 56px;
    height: 56px;
}

.info-s .name {
    font-size: 2rem;
    height: 36px;
}

nav {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 12px 80px;
    color: #fafafa;
    background-color: #1f1f1f;
    position: sticky;
    top: 100px;
}

.nav-menu {
    z-index: 2;
    display: flex;
    font-size: 1rem;
    font-weight: 400;
    color: #fafafa;
    border-bottom: solid 1px var(--n-0);
}

.nav-menu ul {
    margin: 0;
}

.nav-link {
    margin-right: 32px;
    transition: 0.5s;
}

.nav-link:hover {
    transform: translateY(-8%);
    color: #fafafa;
}

.nav-aba {
    width: 100%;
    max-width: 250px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    padding: 8px;
    gap: 8px;
    margin: 0 auto;
}

.btn {
    font-weight: 400;
    padding: 8px 24px 8px 16px;
    text-align: center;
    border: none;
    border-radius: 12px;
    transition: 0.5s;
    cursor: pointer;
}

.btn a {
    display: flex;
}

.btn span {
    margin-right: 8px;
}

.btn i {
    margin-right: 8px;
    font-size: 1.5rem;
}

.btn-prim {
    background-color: var(--n-0);
    color: var(--n-1000);
}

.btn-prim:hover {
    transform: translateY(-8%);
    transition: 0.5s;
}

.btn-prim a {
    font-weight: 400;
}

.btn-prim a:hover {
    color: var(--n-1000);
}

.btn-secon {
    background-color: var(--n-1000);
    padding: 8px 24px;
}

.btn-secon a {
    color: var(--n-0);
}

.btn-secon:hover {
    transform: translateY(-8%);
    transition: 0.5s;
}

[data-tooltip] {
    position: relative;
    z-index: 2;
    cursor: pointer;
    font-size: 0.75rem;
}

[data-tooltip]:before,
[data-tooltip]:after {
    visibility: hidden;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
    filter: progid: DXImageTransform.Microsoft.Alpha(Opacity=0);
    opacity: 0;
    pointer-events: none;
}

[data-tooltip]:before {
    position: absolute;
    bottom: 125%;
    left: 50%;
    margin-bottom: 12px;
    margin-left: -50px;
    padding: 7px;
    width: 120px;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 4px;
    color: var(--n-100);
    background-color: var(--n-1000);
    font-size: 0.85rem;
    font-weight: 600;
    content: attr(data-tooltip);
    text-align: center;
    line-height: 1.2;
    transition: 0.3s;
}

[data-tooltip]:after {
    position: absolute;
    bottom: 125%;
    left: 50%;
    margin-left: -5px;
    width: 0;
    border-top: 5px solid var(--prinbtn);
    border-right: 5px solid transparent;
    border-left: 5px solid transparent;
    content: " ";
    font-size: 0;
    line-height: 0;
    transition: 0.3s;
}

[data-tooltip]:hover:before,
[data-tooltip]:hover:after {
    visibility: visible;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
    filter: progid: DXImageTransform.Microsoft.Alpha(Opacity=100);
    opacity: 1;
}

#menu {
    background-color: var(--n-0);
    border-top: solid 1px var(--n-900);
    height: calc(100% - 100px);
    left: 0;
    opacity: 0;
    overflow: hidden;
    position: fixed;
    text-align: center;
    top: 100px;
    transition: all 0.7s ease-in-out;
    visibility: hidden;
    width: 100%;
    z-index: 2;
}

#menu.open {
    opacity: 1;
    visibility: visible;
}

#menu.open li:nth-child(1) {
    -webkit-animation-delay: 0.1s;
    animation-delay: 0.1s;
}

#menu.open li:nth-child(2) {
    -webkit-animation-delay: 0.2s;
    animation-delay: 0.2s;
}

#menu.open li:nth-child(3) {
    -webkit-animation-delay: 0.3s;
    animation-delay: 0.3s;
}

#menu.open li:nth-child(4) {
    -webkit-animation-delay: 0.4s;
    animation-delay: 0.4s;
}

#menu.open li:nth-child(5) {
    -webkit-animation-delay: 0.5s;
    animation-delay: 0.5s;
}

#menu.open li:nth-child(6) {
    -webkit-animation-delay: 0.6s;
    animation-delay: 0.6s;
}
/* ... */

